# wtf

./: CMakeLists.txt
hello/: CMakeLists.txt  main.cpp
say-hello/: CMakeLists.txt
say-hello/src/say-hello/: hello.cpp  hello.h
